[package]
name = "clbt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-stream = "0.3.6"
async-trait = "0.1.83"
clap = "4.5.21"
future-utils = "0.12.1"
futures = "0.3.31"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "process", "rt", "signal", "sync", "time"] }
